修改wuwuwu为正式版本，，嘿嘿已经打包到maven中央仓库了呢

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>io.github.wuma2020</groupId>
             <artifactId>wuwuwu</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.1</version>
         </dependency>
 
         <!--        java fx ui组件    -->
